tests/machine/x/scala/record_assign.error
exit status 1
/workspace/mochi/tests/machine/x/scala/record_assign.scala:5: error: reassignment to val
    c.n = c.n + 1
        ^
/workspace/mochi/tests/machine/x/scala/record_assign.scala:11: error: type mismatch;
 found   : Counter(in method main)
 required: <empty>.Counter
    inc(c)
        ^
two errors found
